# ZephyrZynqUltraScale

./: .gitignore  CMakeLists.txt  README.md  buildDemo.sh  initEnv.sh  prj.conf
boards/enclustra/mercury_xu_apu/: Kconfig  Kconfig.defconfig  Kconfig.mercury_xu_apu  board.yml  mercury_xu-pinctrl.dtsi  mercury_xu.yaml  mercury_xu_apu.dts  mercury_xu_apu_defconfig
dts/arm64/amd/: zynqmp_apu.dtsi
soc/amd/zynqmp_apu/: CMakeLists.txt  Kconfig  Kconfig.defconfig  Kconfig.soc  arm_mpu_regions.c  pinctrl_soc.h  soc.c  soc.h  soc.yml
src/: _gen_buildNumber.h  dbglog.h  demo.cmake  main.c  main.h  threadCfg.h  version.h
